Fixed footer issues on mobile

--- a/public/styles/partials/_footer.scss
+++ b/public/styles/partials/_footer.scss
@@ -30,3 +30,12 @@ footer {
     }
   }
 }
+
+@media only screen and (max-width: 460px) {
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+}
