--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -13,7 +13,6 @@ html {
  * Global layout stuff
  */
 body {
-  margin: 0;
   color: #86879c;
   background-color: #292d3e;
   font-family: "Raleway", sans-serif;
@@ -381,6 +380,15 @@ footer section p svg {
 }
 footer section p svg .heart {
   fill: #cf002a;
+}
+
+@media only screen and (max-width: 460px) {
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
